--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     body {
       margin: 0;
-      font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       background-color: var(--bg);
       background-image:
         linear-gradient(var(--grid-color) 1px, transparent 1px),
